--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -2,10 +2,10 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: #FFFFFF;
-@syntax-cursor-color: #ffc600;
-@syntax-selection-color: #0050a4;
-@syntax-background-color: #193549;
+@syntax-text-color: #193549;
+@syntax-cursor-color: #0050a4;
+@syntax-selection-color: #ffc600;
+@syntax-background-color: #FFFFFF;
 
 // Guide colors
 @syntax-wrap-guide-color: #3b5364;
@@ -13,14 +13,14 @@
 @syntax-invisible-character-color: #3b5364;
 
 // For find and replace markers
-@syntax-result-marker-color: #ffc600;
-@syntax-result-marker-color-selected: #FFFFFF;
+@syntax-result-marker-color: #FFFFFF;
+@syntax-result-marker-color-selected: #ffc600;
 
 // Gutter colors
-@syntax-gutter-text-color: #FFFFFF;
-@syntax-gutter-text-color-selected: #ffc600;
-@syntax-gutter-background-color: #193549;
-@syntax-gutter-background-color-selected: #1f4662;
+@syntax-gutter-text-color: #193549;
+@syntax-gutter-text-color-selected: #1f4662;
+@syntax-gutter-background-color: #FFFFFF;
+@syntax-gutter-background-color-selected: #ffc600;
 
 // For git diff info. i.e. in the gutter
 // These are static and were not extracted from your textmate theme
